fix: fixed and redesigned the mappers