@@ -1,69 +1,101 @@
 package com.unbunny.carweb.services;
 
 
+import com.unbunny.carweb.dto.CarRequest;
 import com.unbunny.carweb.dto.CarResponse;
+import com.unbunny.carweb.dto.filters.CarFilterRequest;
+import com.unbunny.carweb.mappers.CarImageMapper;
 import com.unbunny.carweb.mappers.CarMapper;
 import com.unbunny.carweb.models.cars.Car;
 import com.unbunny.carweb.repositories.CarRepository;
+import com.unbunny.carweb.repositories.specifications.CarSpecifications;
 import com.unbunny.carweb.services.interfaces.CarService;
-import lombok.RequiredArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.extern.log4j.Log4j2;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@Log4j2
 public class CarServiceImpl implements CarService {
-
-    private static final Logger log = LoggerFactory.getLogger(CarServiceImpl.class);
 
     private final CarRepository carRepository;
     private final CarMapper carMapper;
+    private final CarImageMapper imageMapper;
 
-    public CarServiceImpl(CarRepository carRepository, CarMapper carMapper) {
+    public CarServiceImpl(CarRepository carRepository, CarMapper carMapper, CarImageMapper imageMapper) {
         this.carRepository = carRepository;
         this.carMapper = carMapper;
+        this.imageMapper = imageMapper;
     }
 
     @Override
-    public List<CarResponse> getCarsByCategory(String categorySlug, String sort) {
-        // Получаем список автомобилей по slug категории
-        List<Car> cars = carRepository.findByCategorySlug(categorySlug);
+    public List<CarResponse> getCarsByFilter(CarFilterRequest filterRequest) {
+        Specification<Car> spec = Specification.where(null);
+        if (filterRequest.getCategorySlug() != null) {
+            spec = spec.and(CarSpecifications.hasCategorySlug(filterRequest.getCategorySlug()));
+        }
+        if (filterRequest.getManufacturerSlug() != null) {
+            spec = spec.and(CarSpecifications.hasManufacturerSlug(filterRequest.getManufacturerSlug()));
+        }
+        if (filterRequest.getYearFrom() != null) {
+            spec = spec.and(CarSpecifications.yearGreaterThanOrEqualTo(filterRequest.getYearFrom()));
+        }
+        if (filterRequest.getYearTo() != null) {
+            spec = spec.and(CarSpecifications.yearLessThanOrEqualTo(filterRequest.getYearTo()));
+        }
+        Sort sort = getSort(filterRequest.getSort());
+        Pageable pageable = PageRequest.of(filterRequest.getPage(), filterRequest.getSize(), sort);
 
-        // Преобразуем каждый Car в CarResponse
-        List<CarResponse> responses = cars.stream()
+        return carRepository.findAll(spec, pageable)
+                .stream()
                 .map(carMapper::toCarResponse)
-                .collect(Collectors.toList());
-
-        // Сортируем если нужно (предполагая что sortCars принимает List<CarResponse>)
-        return responses;
+                .toList();
     }
 
     @Override
-    public List<Car> getCarsByManufacturer(String manufacturerSlug, String sort) {
-        return List.of();
+    public CarResponse getCarById(Long id) {
+        if (carRepository.findById(Math.toIntExact(id)).isEmpty()) {
+            return null;
+        }
+        return carMapper.toCarResponse(carRepository.findById(Math.toIntExact(id)).get());
     }
 
     @Override
-    public List<Car> getCarsByFilters(String categorySlug, String manufacturerSlug, Integer yearFrom, Integer yearTo, String sort) {
-        return List.of();
+    public CarResponse createCar(CarRequest carRequest) {
+        Car car = carMapper.toCar(carRequest);
+        Car savedCar = carRepository.save(car);
+        return carMapper.toCarResponse(savedCar);
     }
 
     @Override
-    public Car getCarById(Long id) {
+    public CarResponse updateCar(Long id, CarRequest carRequest) {
         return null;
     }
 
     @Override
-    public void incrementCarViews(Long carId) {
-
+    public CarResponse partialUpdateCar(Long id, CarRequest carRequest) {
+        return null;
     }
 
-    public List<Car> sortCars(List<Car> cars, String sort) {
-        log.info("Sorting cars: " + cars);
-        return cars;
+    @Override
+    public void deleteCar(Long id) {
+        carRepository.deleteById(Math.toIntExact(id));
     }
+
+    private Sort getSort(String sortKey) {
+        if (sortKey == null) return Sort.unsorted();
+        return switch (sortKey) {
+            case "priceAsc" -> Sort.by("price").ascending();
+            case "priceDesc" -> Sort.by("price").descending();
+            case "yearAsc" -> Sort.by("year").ascending();
+            case "yearDesc" -> Sort.by("year").descending();
+            default -> Sort.unsorted();
+        };
+    }
+
 }
